livestock-tracker/ClientApp/src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import '~@angular/material/theming';
@import '~/../app-theme.scss';
@include mat-core();

@font-face {
  font-family: 'Material Icons';
  font-style: normal;
  font-weight: 400;
  src: url('assets/material-icons/MaterialIcons-Regular.eot');
  src: local('Material Icons'), local('MaterialIcons-Regular'),
    url('assets/material-icons/MaterialIcons-Regular.woff2') format('woff2'),
    url('assets/material-icons/MaterialIcons-Regular.woff') format('woff'),
    url('assets/material-icons/MaterialIcons-Regular.ttf') format('truetype');
}

@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('assets/roboto/roboto-v18-latin-regular.eot');
  src: local('Roboto'), local('Roboto-Regular'),
    url('assets/roboto/roboto-v18-latin-regular.eot?#iefix')
      format('embedded-opentype'),
    url('assets/roboto/roboto-v18-latin-regular.woff2') format('woff2'),
    url('assets/roboto/roboto-v18-latin-regular.woff') format('woff'),
    url('assets/roboto/roboto-v18-latin-regular.ttf') format('truetype'),
    url('assets/roboto/roboto-v18-latin-regular.svg#Roboto') format('svg');
}

.material-icons {
  font-family: 'Material Icons';
  font-weight: normal;
  font-style: normal;
  font-size: 24px; /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: 'liga';
}

html {
  overflow: hidden;
}

body {
  padding: 0;
  margin: 0;
  font-family: Roboto, Arial, sans-serif;
}

app-livestock-list {
  display: flex;
  position: relative;
}

.app-background {
  background-color: mat-color($candy-app-primary, 100);
}

.mat-toolbar {
  .mat-nav-list {
    display: flex;
    position: relative;
    .mat-list-item {
      color: $light-primary-text;
    }
  }
  .mat-list-item,
  .mat-list-item .mat-list-item-content,
  .mat-button,
  a {
    color: $light-primary-text;
    font-size: 22px;
    font-weight: 400;
    &:hover {
      color: $light-secondary-text;
      background-color: unset;
    }
    .mat-icon {
      padding-right: 8px;
    }
  }
  a {
    cursor: pointer;
  }
  *[disabled],
  *[disabled] * {
    color: $light-disabled-text;
  }
}

.fill-remaining-space {
  flex: 1 1 auto;
}

.livestock-item-list.mat-selection-list {
  .livestock-item-list__item.mat-list-item {
    .mat-list-item-content {
      padding: 8px;
      &:focus {
        outline: unset;
      }
    }
  }
}

.nav {
  font-size: 22px;
  .nav-secondary,
  .nav-secondary .mat-list-item-content {
    font-size: 16px;
  }
}

.currency-input {
  text-align: right;
  -moz-appearance: textfield;
  appearance: textfield;
}

input.currency-input::-webkit-outer-spin-button,
input.currency-input::-webkit-inner-spin-button {
  display: none;
}

.mat-checkbox {
  margin: auto 4px;
  display: flex;
  flex-direction: column;
  &.mat-checkbox-label-before .mat-checkbox-inner-container {
    margin-left: auto;
    margin-right: 0;
  }
}

.mat-card {
  background-color: mat-color($candy-app-primary, 100);
  .mat-card-header {
    display: flex;
    .mat-icon {
      background-color: mat-color($candy-app-accent, 400);
      border-radius: 50%;
      padding: 4px;
      font-size: unset;
    }
  }
  .mat-card-actions {
    .mat-button {
      text-transform: uppercase;
    }
  }
}

.mat-accent,
*.mat-accent {
  color: mat-color($candy-app-accent);
}

.mat-accent-background,
*.mat-accent-background {
  background-color: mat-color($candy-app-accent);
  color: mat-color($candy-app-accent, '50-contrast');
  .mat-icon {
    color: mat-color($candy-app-accent, '50-contrast');
  }
}

.medical-toolbar__trans-type,
.medical-toolbar__trans-date,
.medical-toolbar__trans-dose,
.medical-toolbar__trans-unit {
  padding: 8px 0 0 8px;
}

.medical-toolbar__trans-type {
  width: 32%;
  padding-left: 0;
  &.mat-select {
    width: 32%;
    padding-left: 0;
  }
}

.medical-toolbar__trans-date,
.medical-toolbar__trans-dose,
.medical-toolbar__trans-unit {
  text-align: right;
  justify-content: flex-end;
}

.medical-toolbar__trans-date {
  width: 30%;
}

.medical-toolbar__trans-dose,
.medical-toolbar__trans-unit {
  width: 15%;
}

.medical-toolbar__trans-trash,
.medical-toolbar__trans-trash.mat-button,
.medical-toolbar__trans-trash.mat-icon-button {
  width: 8%;
  max-width: 40px;
  margin-top: 16px;
  .mat-icon {
    color: rgba(0, 0, 0, 0.54);
    &:hover {
      color: rgba(0, 0, 0, 0.44);
    }
  }
}

.selected-animal-svg {
  margin-right: 8px;
  width: 24px;
  height: 24px;
  padding: 8px;
  background-color: mat-color($candy-app-accent);
  border-radius: 50%;
}

.card-list-container {
  display: block;
  position: relative;
  margin-left: auto;
  margin-right: auto;

  .card-list-content {
    margin-left: auto;
    margin-right: auto;
    position: relative;
    width: 695px;
    min-width: 695px;
    display: flex;
    flex-direction: column;

    .mat-toolbar {
      background-color: mat-color($candy-app-primary, 100);
    }

    .mat-list {
      background-color: mat-color($candy-app-primary, 200);
    }

    .card-list-item {
      display: flex;
      flex-direction: row;
      position: relative;
      flex: 1;

      > .mat-list-item-content {
        flex: 1;
      }

      .card-list-item-content {
        display: flex;
        flex: 1;

        .mat-form-field {
          flex: 1;
        }
      }

      .card-list-item-actions {
        max-width: 48px;
        margin-top: 16px;
      }

      .mat-icon {
        color: rgba(0, 0, 0, 0.54);
      }
    }
  }

  @media only screen and (min-width: 1100px) {
    .card-list-content {
      width: 920px;
    }
  }

  @media only screen and (min-width: 1400px) {
    .card-list-content {
      width: 1150px;
    }
  }

  .mat-fab-bottom-right {
    position: fixed;
    bottom: 16px;
    right: 16px;
  }
}

.ls-grid-container {
  display: block;
  position: relative;
  margin-left: auto;
  margin-right: auto;

  .ls-grid-content {
    margin-left: auto;
    margin-right: auto;
    position: relative;
    width: 695px;
    min-width: 695px;
    display: flex;
    flex-direction: column;

    .ls-grid-toolbar {
      background-color: mat-color($candy-app-primary, 100);
    }

    .ls-grid-list {
      background-color: mat-color($candy-app-primary, 200);
    }
  }

  @media only screen and (min-width: 1100px) {
    .ls-grid-content {
      width: 920px;
    }
  }

  @media only screen and (min-width: 1400px) {
    .ls-grid-content {
      width: 1150px;
    }
  }

  .ls-grid-header {
    display: table;
    table-layout: fixed;
    justify-content: space-around;

    .ls-grid-header-cell {
      font-size: 16px;
      display: table-cell;
      text-align: center;
    }
  }

  .ls-grid-list .ls-grid-list-item .ls-grid-list-item-container {
    display: table;
    table-layout: fixed;
    width: 100%;
  }

  .ls-grid-list
    .ls-grid-list-item
    .ls-grid-list-item-container
    .ls-grid-list-item-cell {
    display: table-cell;
    text-align: center;
  }
}

.form-detail {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  min-height: 100vh;
  height: 100vh;
  overflow-y: auto;
  flex-direction: column;

  .form-detail-toolbar {
    .form-detail-toolbar__header-top {
      height: 30vh;
    }

    .form-detail-toolbar__nav {
      .form-detail-toolbar__nav__desc {
        .mat-icon {
          padding-right: 4px;
          background-color: $light-primary-text;
        }

        .form-detail-toolbar__nav__desc-text {
          padding-left: 8px;
        }
      }
    }
  }

  .form-detail-content {
    display: flex;
    flex-direction: column;
    position: relative;

    .form-detail-content__card {
      position: relative;
      top: -20vh;
      margin: auto;
      min-width: 40vw;
      background-color: mat-color($candy-app-primary, 200);

      .form-detail-content__card-content {
        margin-bottom: 0;
      }

      .form-container-inline {
        display: flex;

        #sold {
          padding-bottom: 1.34375em;
        }
      }

      .mat-form-field,
      .mat-checkbox {
        flex: 1 1 auto;
        width: 50%;
      }

      .mat-form-field {
        margin: 0 4px;
      }

      .mat-card-actions {
        display: flex;
      }

      .mat-card-header .mat-card-header-text .mat-card-title {
        .mat-icon {
          background-color: mat-color($candy-app-accent, 400);
          font-size: unset;
        }
      }
    }
  }
}

app-animal-select-container {
  display: flex;
  flex: 1;

  app-animal-select {
    display: flex;
    flex: 1;
  }
}

app-feeding-transaction {
  .ls-grid-list-item.mat-list-item {
    &:hover {
      cursor: pointer;
    }
  }
}

app-feeding-transaction-form {
  .mat-card-title {
    margin-bottom: 0;
  }

  app-animal-select-container {
    margin-bottom: 20px;
    font-size: 20px;
  }
}

